# graybox-shot-numerical

./: .gitignore  main.py  note_0001_noise_model.ipynb  note_0002_test_shot_exp.ipynb  note_0003_test_shot_exp_overparametrized.ipynb  pyproject.toml  shared.py
